k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: light-messages-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: light-messages.local
      http:
        paths:
          - path: /api/v1/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service-web
                port:
                  number: 8000
          - path: /ws/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service-channels
                port:
                  number: 8000
